#487 #579 Fix market page content being hidden underneath header

--- a/src/modules/market/less/market.less
+++ b/src/modules/market/less/market.less
@@ -1,6 +1,7 @@
 .market {
 	.page-content {
-		color: @color-dark-normal;
+	  margin-top: @site-header-height;
+	  color: @color-dark-normal;
 		background: white;
 		font-size: 1.7vmin;
 
